<resources>
    <string name="app_name">Caixa Supermercado</string>
    <string name="descricao_imagem">Desenho de um carrinho de supermercado cheio de compras</string>
    <string name="mensagem">Esse aplicativo vai te ajudar a calcular o preço dos seus produtos!\nPara isso digite o nome do produto, a quantidade, valor e por fim clique no botão de calcular para verificar o valor da sua compra!</string>
    <string name="nomeProduto">Nome do produto</string>
    <string name="qntProduto">Quantidade do produto</string>
    <string name="valorProduto">Valor (unitário) do produto</string>
    <string name="btnMensag">Calcular</string>
    <string name="mensagem_valor_total">O VALOR TOTAL É DE: R$ 00,00</string>
    <string name="titulo_detalhes_compra">Detalhes Compra</string>
    <string name="msg_refazer_compra">REFAZER COMPRA</string>
</resources>